--- a/src/containers/MainContainer/MainContainer.scss
+++ b/src/containers/MainContainer/MainContainer.scss
@@ -2,5 +2,15 @@
     display: flex;
     width: 100%;
     height: 100%;
-    background-color: red;
+
+    &__forms {
+        flex : 1;
+        height: 100%;
+        background-color: blue;
+    }
+
+    &__image-box {
+        flex: 2;
+        background-color: yellow;
+    }
 }
