[UPDATE] Update App.scss Styling, Font Familly Gloal Append

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,7 @@
   // overflow: hidden;
   // overflow-y: scroll;
   // overflow-x: hidden;
-  // font-family: 'Open Sans', sans-serif;
+  font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
 }
 
 .button {
