--- a/src/components/Student/Login/StudentLogin.scss
+++ b/src/components/Student/Login/StudentLogin.scss
@@ -69,7 +69,7 @@
   &__desc {
     display: flex;
     flex-direction: column;
-    height: 10%;
+    height: 20%;
     margin-left: 60px;
 
     .c-stu-login__desc--explain {
@@ -92,13 +92,14 @@
 
         &__back {
             width: 44px;
+            cursor: pointer;
         }
     }
   }
 
   &__footer {
     display: flex;
-    height: 25%;
+    height: 20%;
     align-items: center;
     svg {
       margin-left: auto;
