--- a/src/components/Choose/MainChoose/Choose.scss
+++ b/src/components/Choose/MainChoose/Choose.scss
@@ -74,7 +74,7 @@
                 }
             }
 
-            &__adm-btn {
+            &__management-btn {
                 cursor: pointer;
                 display: flex;
                 justify-content: center;
