[UPDATE] Update RetrunMenu Icon, Change Style

--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -21,7 +21,7 @@
 
       &__back {
         width: 50px;
-        margin-left: 20px;
+        margin-right: 30px;
         cursor: pointer;
       }
     }
