--- a/src/components/Register/Register.scss
+++ b/src/components/Register/Register.scss
@@ -9,10 +9,10 @@
     &__content {
         display: flex;
         flex-direction: column;
+        justify-content: center;
         margin-left: 60px;
         width: 100%;
-        height: 55%;
-        justify-content: center;
+        height: 60%;
 
         .c-register__content--title {
             font-size: 44px;
@@ -81,8 +81,9 @@
     &__footer {
         display: flex;
         width: 100%;
-        height: 16%;
-
+        height: 20%;
+        justify-content: center;
+        align-items: center;
         svg {
             margin-left: auto;
             margin-right: 33px;
