--- a/src/components/ProfileBar/ProfileBar.scss
+++ b/src/components/ProfileBar/ProfileBar.scss
@@ -46,6 +46,8 @@
         display: flex;
         width: 100%;
         height: 40%;
+        align-items: center;
+        justify-content: center;
         flex-direction: column;
 
         .c-profile-bar__content--user {
@@ -216,7 +218,7 @@
         width: 100%;
         align-items: center;
         margin-bottom: 30px;
-        
+
         p {
             margin-bottom: 8px;
             font-size: 12px;
