--- a/src/containers/HomeContainer/HomeContainer.scss
+++ b/src/containers/HomeContainer/HomeContainer.scss
@@ -13,9 +13,59 @@
 
     &__content {
         display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
         height: 100%;
         width: 100%;
-        background-color: #bbbbbe;
+        background-color: rgb(237, 237, 237);
+        padding-left: 50px;
+        padding-right: 50px;
+
+        .home-container__content--title {
+            font-size: 50px;
+            font-weight: bold;
+            margin-right: auto;
+            small {
+                margin-left: 15px;
+                font-size: 18px;
+                font-weight: normal;
+            }
+        }
+
+        .home-container__content--service {
+            display: flex;
+            width: 100%;
+            height: 15%;
+            background-color: red;
+            margin-top: 50px;
+        }
+
+        .home-container__content--notice {
+            display: flex;
+            width: 100%;
+            height: 40%;
+            margin-top: 40px;
+
+            .consultant {
+                flex: 1;
+                background-color: blue;
+                margin-right: 19px;
+            }
+
+            .resident {
+                flex: 1;
+                background-color: yellow;
+                margin-left: 19px;
+            }
+        }
+
+        .home-container__content--song {
+            width: 100%;
+            height: 20%;
+            margin-top: 40px;
+            background-color: green;
+        }
     }
 
     &__profile {
