--- a/src/components/Notice/Notice.scss
+++ b/src/components/Notice/Notice.scss
@@ -76,7 +76,7 @@
 
                 span {
                     font-size: 16px;
-                    font-weight: bold;
+                    font-weight: normal;
                 }
             }
 
