--- a/src/components/MorningSong/MorningSong.scss
+++ b/src/components/MorningSong/MorningSong.scss
@@ -7,8 +7,9 @@
     background-color: #ffffff;
 
     &__header {
+        margin-top: 20px;
         display: flex;
-        height: 30%;
+        height: 10%;
         align-items: center;
         margin-left: 30px;
         margin-right: 30px;
@@ -25,13 +26,11 @@
     }
 
     &__music-list {
-        height: 110px;
         margin-top: 20px;
+        height: 90%;
         display: flex;
         align-items: center;
-        overflow-x: scroll;
-        overflow: scroll;
-        white-space:nowrap;
+
         .c-morning-song__music-list--single {
             width: 100px;
             height: 100px;
@@ -39,6 +38,11 @@
             box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.16);
             background-color: #ffffff;
             margin-left: 55px;
+            transition: all 500ms;
+
+            &:hover {
+                box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.38);
+            }
         }
     }
 }
