--- a/src/components/LaptopList/LaptopList.scss
+++ b/src/components/LaptopList/LaptopList.scss
@@ -3,4 +3,144 @@
     height: 100%;
     border-radius: 20px;
     background-color: #fff;
+
+   &__title {
+       margin-top: 10px;
+       display: flex;
+       width: 100%;
+       height: 10%;
+       align-items: center;
+       margin-left: 20px;
+       font-size: 24px;
+       font-weight: bold;
+   } 
+
+    &__scroll {
+        width: 100%;
+        height: 88.5%;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        overflow-y: scroll;
+
+        .room {
+            display: flex;
+            margin-bottom: 20px;
+            margin-top: 20px;
+            width: 90%;
+            flex: 0 0 150px;
+            border-radius: 15px;
+            -webkit-backdrop-filter: blur(30px);
+            backdrop-filter: blur(30px);
+            box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.16);
+            background-color: #ffffff;
+            transition: all 500ms;
+            
+            &__left {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                height: 100%;
+                width: 70%;
+                margin-left: 25px;
+
+                .room__left--status {
+                    display: flex;
+                    width: 100%;
+                    margin-bottom: 5px;
+                    align-items: center;
+
+                    &__red {
+                        border-radius: 50%;
+                        width: 10px;
+                        height: 10px;
+                        background-color: #e11a1a;
+                        color: #e11a1a;
+                    }
+
+                    &__green {
+                        border-radius: 50%;
+                        width: 10px;
+                        height: 10px;
+                        background-color: #28c842;
+                        color: #28c842;
+                    }
+
+                    &__yellow {
+                        border-radius: 50%;
+                        width: 10px;
+                        height: 10px;
+                        background-color: #f8c600;
+                        color: #f8c600;
+                    }
+
+                    &__text {
+                        margin-left: 5px;
+                        font-size: 11px;
+                        font-weight: bold;
+
+                        &--red {
+                            color: #e11a1a;
+                        }
+
+                        &--green {
+                            color: #28c842;
+                        }
+
+                        &--yellow {
+                            color: #f8c600;
+                        }
+                    }
+
+                }
+
+                .room__left--name {
+                    display: flex;
+                    width: 100%;
+                    font-size: 24px;
+                    font-weight: bold;
+                }
+
+                .room__left--desc {
+                    display: flex;
+                    width: 100%;
+                    margin-top: 5px;
+                    font-size: 16px;
+                    color: #8b8b8b;
+
+                        &__red {
+                            margin-left: 3px;
+                            margin-right: 3px;
+                            font-weight: bold;
+                            color: #e11a1a;
+                        }
+
+                        &__green {
+                            margin-left: 3px;
+                            margin-right: 3px;
+                            font-weight: bold;
+                            color: #28c842;
+                        }
+
+                        &__yellow {
+                            margin-left: 3px;
+                            margin-right: 3px;
+                            font-weight: bold;
+                            color: #f8c600;
+                        }
+                }
+            }
+
+            &__right {
+                width: 30%;
+                height: 100%;
+            }
+
+            &:hover {
+                box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.38);
+            }
+        }
+    }
 }
+
+    
