--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,10 @@
   font-family: 'Spoqa Han Sans', 'Spoqa Han Sans JP', 'Sans-serif';
 }
 
+a {
+  text-decoration: none;
+}
+
 .button {
   margin-top: 15px;
   background-color: #a29bfe;
