--- a/src/components/LaptopDesc/LaptopDesc.scss
+++ b/src/components/LaptopDesc/LaptopDesc.scss
@@ -1,6 +1,119 @@
 .c-laptop-desc {
+    display: flex;
     width: 100%;
     height: 100%;
     border-radius: 20px;
     background-color: #fff;
+
+    &__left {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 80%;
+
+        .c-laptop-desc__left--header {
+            width: 100%;
+            height: 20%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            margin-left: 30px;
+
+            &__title {
+                font-size: 24px;
+                font-weight: bold;
+            }
+
+            &__desc {
+                margin-top: 7px;
+                font-size: 16px;
+                font-weight: bold;
+            }
+        }
+
+        .c-laptop-desc__left--content {
+            width: 100%;
+            height: 80%;
+            margin-left: 30px;
+        }
+    }
+
+    &__right {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 25%;
+        width: 20%;
+
+      .c-laptop-desc__right--nope {
+        min-width: 100px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+
+        &__box {
+            width: 20px;
+            height: 20px;
+            background-color: #f1f8ff;
+            margin-right: 10px;
+        }
+
+        span {
+            font-size: 12px;
+            margin-right: auto;
+        }
+
+      }  
+
+      .c-laptop-desc__right--use {
+        min-width: 100px;
+         margin-top: 10px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        
+        &__box {
+            width: 20px;
+            height: 20px;
+            background-color: #0f4c81;
+            margin-right: 10px;
+        }
+
+        span {
+            font-size: 12px;
+            margin-right: auto;
+        }
+
+      }
+
+      .c-laptop-desc__right--sele {
+        min-width: 100px;
+        margin-top: 10px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+
+        &__box {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 20px;
+            height: 20px;
+            background-color: #0b2b47;
+            margin-right: 10px;
+        }
+
+        span {
+            font-size: 12px;
+            margin-right: auto;
+        }
+
+      }
+    }
 }
