[UPDATE] Fix Error, Return 0

--- a/src/components/LaptopList/LaptopList.scss
+++ b/src/components/LaptopList/LaptopList.scss
@@ -35,6 +35,7 @@
             box-shadow: 0 1px 10px 0 rgba(0, 0, 0, 0.16);
             background-color: #ffffff;
             transition: all 500ms;
+            cursor: pointer;
             
             &__left {
                 display: flex;
