--- a/src/components/LaptopDesc/RoomType/Lap/Lap.scss
+++ b/src/components/LaptopDesc/RoomType/Lap/Lap.scss
@@ -81,7 +81,6 @@
             }
 
             &__table-left-not {
-                cursor: pointer;
                 width: 55px;
                 background-color: #f1f8ff;
                 height: 55px;
@@ -94,5 +93,76 @@
             }
 
          }
+    }
+}
+
+.c-dialog {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.c-dialog-wrapper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &__box {
+        box-sizing: border-box;
+        border-radius: 20px;
+        width: 40%;
+        background: white;
+        box-shadow: 0px 4px 8px 8px rgba(0, 0, 0, 0.05);
+        padding: 2rem;
+      
+        h3 {
+          font-size: 24px;
+          color: #222222;
+          font-weight: bold;
+          margin-top: 0;
+          margin-bottom: 35px;
+        }
+      
+        p {
+          display: flex;
+          width: 100%;
+          height: 20%;
+          justify-content: center;
+          align-items: center;
+          font-size: 1.125rem;
+          margin: 0;
+          color: #222222;
+
+          span {
+              font-size: 20px;
+              font-weight: bold;
+              margin-right: 5px;
+          }
+          margin-top: 50px;
+          margin-bottom: 50px;
+        }
+
+        .c-dialog-wrapper__box--buttons {
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            
+            button {
+                margin-top: 20px;
+                font-size: 18px;
+                color: #8b8b8b;
+            }
+
+        }
     }
 }
