--- a/src/containers/Navigations/Laptop/Laptop.scss
+++ b/src/containers/Navigations/Laptop/Laptop.scss
@@ -3,6 +3,64 @@
     font-weight: bold;
     margin-right: auto;
     margin-bottom: 35px;
+    display: flex;
+
+    .borrow {
+        margin-top: 2px;
+        margin-left: 31px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 12px;
+        border-radius: 10px;
+        background-color: #0f4c81;
+
+        svg {
+            width: 21px;
+            height: 21px;
+            margin-right: 5px;
+        }
+
+        span {
+            font-size: 18px;
+            font-weight: bold;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.5;
+            letter-spacing: -0.36px;
+            text-align: left;
+            color: #ffffff;
+        }
+    }
+
+    .unborrow {
+        margin-top: 2px;
+        margin-left: 31px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 9px;
+        border-radius: 10px;
+        border: solid 3px #0f4c81;
+        background-color: #ffffff;
+
+        svg {
+            width: 21px;
+            height: 21px;
+            margin-right: 5px;
+        }
+
+        span {
+            font-size: 18px;
+            font-weight: bold;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.5;
+            letter-spacing: -0.36px;
+            text-align: left;
+            color: #0f4c81;
+        }
+    }
 }
 
 .laptop-content {
