[UPDATE] Cursor Pointer Event

--- a/src/components/ProfileBar/ProfileBar.scss
+++ b/src/components/ProfileBar/ProfileBar.scss
@@ -29,6 +29,7 @@
         }
 
         .c-profile-bar__header--logout {
+            cursor: pointer;
             margin-left: auto;
             display: flex;
             justify-content: center;
